replace libsodium code with monocypher code

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,8 +1,10 @@
 bs_speke.js:
-	emcc -Oz -s WASM=0 \
+	emcc -O3 -s WASM=1 \
 		-s EXPORTED_FUNCTIONS='["_free", "_malloc", "_bs_speke_size", "_bs_speke_init", "_bs_speke_get_salt", "_bs_speke_derive_secret", "_bs_speke_register", "_bs_speke_login_key_exchange"]' \
+		-s EXPORTED_RUNTIME_METHODS='["ccall","cwrap"]' \
 		-s ALLOW_MEMORY_GROWTH=1 \
 		-s MODULARIZE=1 \
+		-s EXPORT_ES6=1 \
 		-s 'EXPORT_NAME="bs_speke"' \
 		-s SINGLE_FILE=1 \
 		-s AGGRESSIVE_VARIABLE_ELIMINATION=1 \
